# terminal-styler

./: Cargo.toml  README.md  mouse_test.md  steps.txt  stuff.sh
src/: ansi.pest  app.rs  colors.rs  export.rs  fx.rs  import.rs  input.rs  main.rs  mouse.rs  ui.rs
