[package]
name = "terminal-styler"
version = "0.1.0"
edition = "2021"
description = "Interactive terminal text styling tool with ANSI export"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
arboard = "3.4"
anyhow = "1.0"
tachyonfx = "0.20.1"
pest = "2.7"
pest_derive = "2.7"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }